RESOLVED FIXED249017
[GTK] gtk-wk2 failing for tests related to X25519 algorithm
https://bugs.webkit.org/show_bug.cgi?id=249017
Summary [GTK] gtk-wk2 failing for tests related to X25519 algorithm
Angela
Reported 2022-12-09 06:03:56 PST
The bots in gtk-wk2 are failing for the tests related to the X25519 algorithm, in which is not implemented in the platform yet. Those are crypto/subtle/X25519-derive-bits-length-limits.html, crypto/subtle/X25519-derive-bits-malformed-parameters.html, crypto/subtle/X25519-generate-export-key-raw.html, crypto/subtle/X25519-generate-key-derive-bits.html, crypto/subtle/X25519-generate-key-exctractable.html, crypto/subtle/X25519-generate-key.html, crypto/subtle/X25519-generate-single-usage.html. This is part of the algorithms used to work with Curve25519.
Attachments
Javier Fernandez
Comment 1 2023-08-10 17:39:07 PDT
EWS
Comment 2 2023-09-03 23:45:43 PDT
Committed 267602@main (0dab8bb6c4d7): <https://commits.webkit.org/267602@main> Reviewed commits have been landed. Closing PR #16588 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.